# sample-system-aws-lambda

./: .gitignore  README.md  _config.yml  _toc.yml  pyproject.toml  requirements.txt
.github/workflows/: jupyter-book.yml
sample-dotnet8@otel/: INSTRUMENTATION.md  README.md  samconfig.toml  sample-dotnet8@otel.sln  template.yaml
sample-dotnet8@otel/src/HelloWorld/: Function.cs  HelloWorld.csproj  aws-lambda-tools-defaults.json  collector.yaml
sample-dotnet8@otel/test/HelloWorld.Test/: HelloWorld.Tests.csproj
sample-golang@otel/: INSTRUMENTATION.md  README.md  samconfig.toml  template.yaml
sample-golang@otel/src/HelloWorld/: Makefile  go.mod  go.sum  main.go  main_test.go
