[project]
name = "sample-system-aws-lambda"
version = "0.1.0"
description = ""
authors = [
    {name = "zodiacfireworks",email = "martin.vuelta@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
